fix(privacy policy): add background to contrast header

--- a/app/scss/_privacy-policy.scss
+++ b/app/scss/_privacy-policy.scss
@@ -1,14 +1,25 @@
 :root {
     scroll-behavior: smooth;
-    scroll-padding-block-start: 70px;
+    scroll-padding-block-start: 85px;
 
     --color-link: #3030F1;
     --color-gray: #595959;
 }
 
+.privacy-policy__page {
+    padding-top: 100px;
+    padding-inline: 8px;
+    font-family: Arial, sans-serif;
+    color: var(--color-gray);
+    font-size: 14px;
+    line-height: 22px;
+    background: transparent linear-gradient(0deg, #f1f3f6 0%, #f7faf7 100%) 0% 0% no-repeat padding-box;
+}
+
 .collected-info__table {
     border-collapse: collapse;
     border: 1px solid var(--color-gray);
+    background-color: #fff;
 
     & tr {
         display: grid;
@@ -27,15 +38,6 @@
     & td, & th {
         border: 1px solid var(--color-gray);
     }
-}
-
-.privacy-policy__page {
-    margin-top: 100px;
-    margin-inline: 8px;
-    font-family: Arial, sans-serif;
-    color: var(--color-gray);
-    font-size: 14px;
-    line-height: 22px;
 }
 
 .main-information {
@@ -86,7 +88,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    margin-bottom: 48px;
+    padding-bottom: 48px;
 }
 
 .square-list {
